<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/howl"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="144dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="269dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="537dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="167dp" />

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_edit"
        android:drawableLeft="@drawable/ic_chevron_right_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/feedbacknumber"
        android:inputType="number"
        android:maxLength="4"
        android:paddingLeft="10dp"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@color/DarkGray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnOrdena"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_button"
        android:text="@string/btnOrdena"
        android:textAllCaps="false"
        android:textColor="@color/CadetBlue"
        android:textColorHint="@color/CadetBlue"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.639" />

    <ImageButton
        android:id="@+id/btnAgregar"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:background="@null"
        android:contentDescription="@string/btnAgregar"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.218"
        app:srcCompat="@drawable/plus" />

</androidx.constraintlayout.widget.ConstraintLayout>